[OPENMEETINGS-2780] apache-parent, junit, wicket, wicketstuff, wicket-bootstrap, spring, tomcat, jetty, ical4j, openjpa, asterisk-java, commons-lang3, commons-io, logback, kurento, jodconverter, swagger and plugins